--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "webpack-cli": "^6.0.1"
   },
   "scripts": {
-    "build": "webpack --mode production && node combine-header.mjs",
+    "build": "webpack --mode production",
     "dev": "webpack --watch --mode development"
   }
 }
